# maddie-wtf

./: .env.example  CHANGELOG.md  Cargo.nix  Cargo.toml  README.md  dist-workspace.toml  flake.nix  rust-toolchain.toml
example-content/: _index.md
maddie-wtf/: Cargo.toml  build.rs
maddie-wtf/scss/: style.scss
maddie-wtf/src/: errors.rs  handlers.rs  lib.rs  main.rs  metric.rs
maddie-wtf/src/state/: names.rs  render.rs
maddie-wtf/src/templates/: partials.rs  wrappers.rs
scss/: style.scss
src/: errors.rs  handlers.rs  lib.rs  main.rs  state.rs
src/state/: names.rs  render.rs
src/templates/: pages.rs  partials.rs  wrappers.rs
www/: Cargo.toml
www/src/: config.rs  errors.rs  lib.rs  lifecycle.rs  observability.rs
