[package]
name = "www"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cfg-if = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
